--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Javascript function parser utility",
   "main": "fnparser.js",
   "scripts": {
-    "test": "mocha test/test_bootstrap.js --reporter spec"
+    "test": "mocha test/test_bootstrap.js --reporter spec --no-colors"
   },
   "repository": "https://github.com/franleplant/fn-parser.git",
   "author": "franleplant@gmail.com",
